[package]
name = "solana-program-px"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.5.3"
chrono = "0.4.39"
solana-program = "=2.0.10"
spl-associated-token-account = {version = "=5.0.1", features = ["no-entrypoint"] }
spl-token = { version = "=6.0.0", features = ["no-entrypoint"] }
thiserror = "2.0.9"

[dev-dependencies]
solana-program-test = "=2.0.10"
solana-sdk = "=2.0.10"
spl-associated-token-account = {version = "=5.0.1", features = ["no-entrypoint"] }
spl-token = { version = "=6.0.0", features = ["no-entrypoint"] }
assert_matches = "1.5.0"
solana-logger = "=2.0.10"
borsh = "1.5.3"